--- a/EscultorUI/dialognovo.ui
+++ b/EscultorUI/dialognovo.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>402</width>
+    <width>252</width>
     <height>150</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>20</y>
-     <width>361</width>
+     <width>211</width>
      <height>101</height>
     </rect>
    </property>
